Add student accounts and fix get and list student routes
