# src/apps/api/handlers/dto/request/timeRecord.go
@@ -4,8 +4,6 @@ import (
 	"eletronic_point/src/core/domain/errors"
 	"eletronic_point/src/core/domain/timeRecord"
 	"time"
-
-	"github.com/google/uuid"
 )
 
 type TimeRecord struct {
@@ -15,7 +13,6 @@ type TimeRecord struct {
 	Location      string     `json:"location" example:"Localização 1"`
 	IsOffSite     bool       `json:"is_off_site" example:"false"`
 	Justification *string    `json:"justification" example:""`
-	StudentID     uuid.UUID  `json:"student_id" example:"5fa6d07d-4e5a-4d27-8f8b-3de0dbec5c65"`
 }
 
 func (this *TimeRecord) ToDomain() (timeRecord.TimeRecord, errors.Error) {
@@ -25,7 +22,6 @@ func (this *TimeRecord) ToDomain() (timeRecord.TimeRecord, errors.Error) {
 		WithExitTime(this.ExitTime).
 		WithLocation(this.Location).
 		WithIsOffSite(this.IsOffSite).
-		WithJustification(this.Justification).
-		WithStudentID(this.StudentID)
+		WithJustification(this.Justification)
 	return builder.Build()
 }
